# controllers/apartmentController.mjs
@@ -1,0 +1,60 @@
+import logger from '../logger.mjs';
+import { AppError } from '../utils/errors.mjs';
+import { executeQuery } from '../connect-mysql.mjs';
+
+export const getApartments = async (req, res, next) => {
+    try {
+        const apartments = await executeQuery(`
+            SELECT 
+                dong_code,
+                Address2, 
+                name,
+                latitude, 
+                longitude,
+                complexNo
+            FROM real_apartment_info
+        `);
+
+        res.status(200).json(apartments);
+    } catch (error) {
+        logger.error('Error fetching apartments:', error);
+        next(new AppError(`Error fetching apartments: ${error.message}`, 500));
+    }
+};
+
+export const getPriceHistory = async (req, res, next) => {
+    try {
+        const priceHistory = await executeQuery(`
+            SELECT 
+                SEQ,
+                Date,
+                complexNo,
+                Name,
+                Area,
+                Price,
+                dealPriceMin,
+                dealPriceMax,
+                leasePriceMin,
+                leasePriceMax,
+                leasePriceRate,
+                leasePriceRateMin,
+                leasePriceRateMax
+            FROM real_price_hist
+            WHERE Date >= DATE_SUB(CURDATE(), INTERVAL 1 YEAR)
+            ORDER BY complexNo, Date
+        `);
+
+        const formattedPriceHistory = priceHistory.reduce((acc, row) => {
+            if (!acc[row.complexNo]) {
+                acc[row.complexNo] = [];
+            }
+            acc[row.complexNo].push(row);
+            return acc;
+        }, {});
+
+        res.status(200).json(formattedPriceHistory);
+    } catch (error) {
+        logger.error('Error fetching price history:', error);
+        next(new AppError(`Error fetching price history: ${error.message}`, 500));
+    }
+};
